--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-/*
-header { 
-    display: block;
-}*/
 
 html{
     background: url(/images/backgroundBrocolli.jpg) no-repeat center center fixed;
@@ -12,22 +8,102 @@ html{
 }
 
 #logo{
-    width: 30%;
+    width: 25%;
     max-width: 100%;
-    object-position: center;
+    margin-right: 50%;
+    margin-left: 41%;
+    margin-top: -3px;
+    margin-bottom: -4px;
 }
 
-.uslocations{
+header h1{
+    margin-right: 5%;
+    margin-left: 13%;    
+    margin-bottom: 35px;
+    padding-left: 2.4%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    width: 1050px;
+    border: 10px solid hsla(188, 58%, 55%,.5);
+    background: white;
+    background-clip: padding-box;
+    font-family: 'Comfortaa', cursive;
+}        
+
+li{
+    list-style-type: none; 
+}
     
+/*Text for Sidebar*/
+#sidebar{
+    font-weight: bold;
+    font-family: Verana, Arial;
+    font-size: 25px;
+    position: fixed;
+    margin-top: 300px;
+    margin-left: -34px;
+    line-height: 1;
+    padding-left: 2em; text-indent: -2em;   
 }
 
+a, a:link, a:visited, a:hover, a:active {
+    color: inherit;
+    text-decoration: none;
+}
+
+
+#sidebarbox{
+    border: 2px solid ;
+    border-right-color: skyblue;
+    border-bottom-color: hsla(188, 58%, 55%,.3);
+    border-top-color: hsla(188, 58%, 55%,.3);
+    border-left-color: hsla(188, 58%, 55%,.3);
+    background-color: hsla(188, 58%, 55%,.5);
+/* (old green) background-color: rgba(12, 109, 1, .80);*/
+    width: 150px;
+    height:5400px;    
+    top: 0;
+    left: 0;
+    right: 5;
+    padding: 8px 6px 6px 6px;
+    position: absolute;
+}
+
+
+
+/*indent US cities*/
+.uslocations{
+    padding-left: 20px;
+}
+
+.location{
+    color: red;
+    margin-left: 180px;
+}
+
+/*white box post with transparent border*/
 .post{
     border: 10px solid hsla(0,0%,100%,.5);
     background: white;
     background-clip: padding-box;
+    margin-left: 176px;
 }
 
 .post_pic{
     border-radius: 1%;
-    
+    max-height: 150px;
+    max-width: 200px;
+}
+
+.post img:first-child{
+    margin-left: 26%;
+}
+
+.description{
+    margin-left: 26%;
+    margin-right: 25%;
+}
+
+footer{
+  margin-left: 230px;  
 }
