--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,8 @@ header h1{
     border: 10px solid hsla(188, 58%, 55%,.5);
     background: white;
     background-clip: padding-box;
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Antic', sans-serif;
+    font-size: 37px;
 }        
 
 li{
@@ -37,13 +38,15 @@ li{
 /*Text for Sidebar*/
 #sidebar{
     font-weight: bold;
-    font-family: Verana, Arial;
-    font-size: 25px;
+    font-family: Arial, sans-serif; 
+    font-size: 24px;
     position: fixed;
     margin-top: 300px;
-    margin-left: -34px;
-    line-height: 1;
-    padding-left: 2em; text-indent: -2em;   
+    margin-left: -38px;
+    line-height: 1.3;
+    padding-left: 2em; text-indent: -2em;  
+    color: #3183b6;
+    font-family: 'Homemade Apple';
 }
 
 a, a:link, a:visited, a:hover, a:active {
@@ -60,12 +63,12 @@ a, a:link, a:visited, a:hover, a:active {
     border-left-color: hsla(188, 58%, 55%,.3);
     background-color: hsla(188, 58%, 55%,.5);
 /* (old green) background-color: rgba(12, 109, 1, .80);*/
-    width: 150px;
+    width: 149px;
     height:5400px;    
     top: 0;
     left: 0;
     right: 5;
-    padding: 8px 6px 6px 6px;
+    padding: 5px 9px 7px 7px;
     position: absolute;
 }
 
@@ -77,8 +80,10 @@ a, a:link, a:visited, a:hover, a:active {
 }
 
 .location{
-    color: red;
+/*    color: #992e82;*/
+    color: #31b6a7;
     margin-left: 180px;
+    font-family: 'Antic', sans-serif;
 }
 
 /*white box post with transparent border*/
@@ -87,12 +92,15 @@ a, a:link, a:visited, a:hover, a:active {
     background: white;
     background-clip: padding-box;
     margin-left: 176px;
+    font-family: 'Antic', sans-serif;
+    line-height: 1;
 }
 
 .post_pic{
     border-radius: 1%;
     max-height: 150px;
     max-width: 200px;
+    
 }
 
 .post img:first-child{
